--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="owner" content="Pedro Olivença" />
     <meta name="title" content="Geckoboard Challenge" />
     <meta property="description" content="Geckoboard Challenge" />
-    <link rel="icon" href="Content/Images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="Content/Images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="Images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/favicon.ico" type="image/x-icon" />
     <title>Geckoboard Challenge</title>
     <meta name="description" content="KPI dashboards from Geckoboard - Communicate the metrics that matter across your business" />
     <meta property="og:title" content="Geckoboard Challenge" />
@@ -29,15 +29,32 @@
     <meta name="twitter:description" content="Get to know Geckoboard: Communicate your most important KPIs across your business.">
     <meta name="twitter:creator" content="">
     <meta name="twitter:image" content="https://www.geckoboard.com/assets/png/geckoboard-learn.png">
-        <script src="Scripts/Vendor/jquery-2.1.4.js"></script>    <script src="Scripts/Vendor/jquery-ui-1.11.4.js"></script>    <script src="Scripts/Vendor/nicescroll.js"></script>    <script src="App/angular.1.3.16.js"></script>    <script src="App/angular-resource.js"></script>    <link href="Styles/Main.css" rel="stylesheet"/> 
+    <script src="Scripts/Vendor/jquery-2.1.4.js"></script>
+    <script src="Scripts/Vendor/jquery-ui-1.11.4.js"></script>
+    <script src="Scripts/Vendor/nicescroll.js"></script>
+    <script src="App/angular.1.3.16.js"></script>
+    <script src="App/angular-resource.js"></script>
+    <link href="Styles/Main.css" rel="stylesheet" />
 </head>
 <body>
     <header>
-        
+        <div class="Header">
+            <div class="container">
+                <div class="grid-wrpp">
+                    <div class="col-6">
+                        <h4><i class="icon-github"></i>Popular Repositories</h4>
+                    </div>
+                    <div class="col-6 col-invert">
+                        <div class="user-wrpp">
+                            <img src="" /><span>name</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <div class="Main">
         <div class="Content">
-            
         </div>
     </div>
 </body>
