--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,800,400italic' rel='stylesheet' type='text/css'>
@@ -42,7 +42,7 @@
             <div class="container">
                 <div class="grid-wrpp">
                     <div class="col-6">
-                        <h4><i class="icon-github"></i>Popular Repositories</h4>
+                        <h4><i class="icon-github"></i>&nbsp;<span>Popular Repositories</span></h4>
                     </div>
                     <div class="col-6 col-invert">
                         <div class="user-wrpp">
