--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     </div>
                     <div class="col-6 col-invert">
                         <div class="user-wrpp">
-                            <img src="" /><span>name</span>
+                            <div class="img"><img src="" /></div>
+                            <span>name</span>
                         </div>
                     </div>
                 </div>
