--- a/index.html
+++ b/index.html
@@ -56,7 +56,25 @@
     </header>
     <div class="Main">
         <div class="Content">
+
+            <div class="container">
+                <div class="grid-wrpp">
+                    <div class="List">
+                        <div class="list-item">
+                            <div class="item-name">Repository Name</div>
+                            <div class="item-stats">
+                                <ul>
+                                    <li><i class="icon-star"></i><br /><span>0</span></li>
+                                    <li><i class="icon-eye"></i><br /><span>0</span></li>
+                                    <li><i class="icon-flow-branch"></i><br /><span>0</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
 </body>
 </html>
