--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
     <script src="Scripts/Vendor/nicescroll.js"></script>
     <script src="App/angular.1.3.16.js"></script>
     <script src="App/angular-resource.js"></script>
+    <script src="App/app.module.js"></script>
     <link href="Styles/Main.css" rel="stylesheet" />
 </head>
-<body>
+<body ng-app="app">
     <header>
         <div class="Header">
             <div class="container">
