--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="container">
                 <div class="grid-wrpp">
                     <div class="List">
-                        <div class="list-item">
+                        <div class="list-item" ng-repeat="block in vm.feeds">
                             <div class="item-name">Repository Name</div>
                             <div class="item-stats">
                                 <ul>
