--- a/index.html
+++ b/index.html
@@ -64,14 +64,7 @@
                 <div class="grid-wrpp">
                     <div class="List">
                         <div class="list-item" ng-repeat="block in vm.feeds">
-                            <div class="item-name">Repository Name</div>
-                            <div class="item-stats">
-                                <ul>
-                                    <li><i class="icon-star"></i><br /><span>0</span></li>
-                                    <li><i class="icon-eye"></i><br /><span>0</span></li>
-                                    <li><i class="icon-flow-branch"></i><br /><span>0</span></li>
-                                </ul>
-                            </div>
+                            <div result-section block="block"></div>
                         </div>
                     </div>
                 </div>
