set focus behavior
Add css styles and angular scripts to control input focus

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         <h4><i class="icon-github"></i>&nbsp;<span>Popular Repositories</span></h4>
                     </div>
                     <div class="col-4 col-6-md">
-                        <div class="form-block">
-                            <input type="text" ng-model="vm.user"  />
+                        <div class="form-block" ng-class="{'active': vm.focus}">
+                            <input type="text" ng-model="vm.user" ng-focus="vm.setFocus()" ng-blur="vm.setBlur()" />
                             <label>search by user login</label>
                         </div>
                     </div>
