--- a/index.html
+++ b/index.html
@@ -68,10 +68,18 @@
         <div class="Content">
             <div class="container">
                 <div class="grid-wrpp">
-                    <div class="List">
+                    <div class="List" ng-show="!vm.seeDetails">
                         <div class="list-item" ng-repeat="block in vm.feeds | orderBy: '-stargazers_count' | limitTo: 20">
                             <div result-section block="block"></div>
                         </div>
+                    </div>
+                    <div class="details" ng-if="vm.seeDetails">
+                        <p>title</p>
+                        <p>description</p>
+                        <p>created: <span></span></p>
+                        <a href="" target="_blank">repo url</a>
+                        <br />
+                        <a href="" class="btn">back</a>
                     </div>
                 </div>
             </div>
