repo click event
Change dom to show details on repo click

--- a/App/Search/section.html
+++ b/App/Search/section.html
@@ -1,4 +1,4 @@
-﻿<div class="item-name">{{block.name}}</div>
+﻿<div class="item-name" ng-click="onClick()">{{block.name}}</div>
 <div class="item-stats">
     <ul>
         <li><i class="icon-star"></i><span>{{block.stargazers_count}}</span></li>
