added search box feature
Added search box behavior. Does a automatic get after 1s with no action
on input filed

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col-4 col-6-md">
                         <div class="form-block" ng-class="{'active': vm.focus}">
-                            <input type="text" ng-model="vm.user" ng-focus="vm.setFocus()" ng-blur="vm.setBlur()" />
+                            <input type="text" ng-model="vm.user" ng-keyup="vm.keyupSearch()" ng-focus="vm.setFocus()" ng-blur="vm.setBlur()" />
                             <label>search by user login</label>
                         </div>
                     </div>
