--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     </div>
                     <div class="col-4 col-6-md col-invert">
                         <div class="user-wrpp">
-                            <div class="img"><img ng-src="{{vm.avatar}}" /></div>
-                            <span>{{vm.username}}</span>
+                            <div class="img"><img ng-src="{{vm.userdata.avatar_url}}" /></div>
+                            <span>{{vm.userdata.name}}</span>
                         </div>
                     </div>
                 </div>
